text-align fix on jadogi example

--- a/examples/JSON/jadogi/jadogi_tracker.css
+++ b/examples/JSON/jadogi/jadogi_tracker.css
@@ -281,6 +281,7 @@
 	background-color: #181818;
 	border-radius: 4px;
 	width: 20px;
+	text-align: center;
 }
 
 @keyframes tracker_transition {
